Fixed typo and indenting issues

--- a/index.html
+++ b/index.html
@@ -170,9 +170,8 @@ Choose who you want to break up with
 &lt;/div&gt;
 &lt;/div&gt;
 
-</tw-passagedata><tw-passagedata pid="2" name="Daniel" tags="" position="1313,356.5" size="100,100">(set: $name to &quot;Daniel&quot;)
-(set: $personImage to &#39;&lt;img src=&quot;https://i.ibb.co/HHGvh3V/1.png&quot; alt=&quot;1&quot; border=&quot;0&quot;&gt;&#39;)
-&lt;h3&gt;Where do you want to break up with Daniel&lt;/h3&gt;
+</tw-passagedata><tw-passagedata pid="2" name="Daniel" tags="" position="1313,355.5" size="100,100">(set: $name to &quot;Daniel&quot;)
+(set: $personImage to &#39;&lt;img src=&quot;https://i.ibb.co/HHGvh3V/1.png&quot; alt=&quot;1&quot; border=&quot;0&quot;&gt;&#39;)&lt;h3&gt;Where do you want to break up with Daniel?&lt;/h3&gt;
 
 &lt;div class=&quot;myGallery&quot;&gt;
 &lt;div class=&quot;place1&quot;&gt;
@@ -209,9 +208,8 @@ The [[house]] where they
 grew up, in front of their 
 parents
 &lt;/div&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="3" name="Ryuu" tags="" position="380,339.5" size="100,100">(set: $name to &quot;Ryuu&quot;)
-(set: $personImage to &#39;&lt;img src=&quot;https://i.ibb.co/v4jDs6j/2.png&quot; alt=&quot;2&quot; border=&quot;0&quot;&gt;&#39;)
-&lt;h3&gt;Where do you want to break up with Ryuu&lt;/h3&gt;
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="3" name="Ryuu" tags="" position="379,339.5" size="100,100">(set: $name to &quot;Ryuu&quot;)
+(set: $personImage to &#39;&lt;img src=&quot;https://i.ibb.co/v4jDs6j/2.png&quot; alt=&quot;2&quot; border=&quot;0&quot;&gt;&#39;)&lt;h3&gt;Where do you want to break up with Ryuu?&lt;/h3&gt;
 
 &lt;div class=&quot;myGallery&quot;&gt;
 &lt;div class=&quot;place1&quot;&gt;
@@ -248,9 +246,8 @@ The [[house]] where they
 grew up, in front of their 
 parents
 &lt;/div&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="4" name="Hernan" tags="" position="500,343.5" size="100,100">(set: $name to &quot;Hernan&quot;)
-(set: $personImage to &#39;&lt;img src=&quot;https://i.ibb.co/Pm5j07C/5.png&quot; alt=&quot;5&quot; border=&quot;0&quot;&gt;&#39;)
-&lt;h3&gt;Where do you want to break up with Hernan&lt;/h3&gt;
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="4" name="Hernan" tags="" position="500,344.5" size="100,100">(set: $name to &quot;Hernan&quot;)
+(set: $personImage to &#39;&lt;img src=&quot;https://i.ibb.co/Pm5j07C/5.png&quot; alt=&quot;5&quot; border=&quot;0&quot;&gt;&#39;)&lt;h3&gt;Where do you want to break up with Hernan?&lt;/h3&gt;
 
 &lt;div class=&quot;myGallery&quot;&gt;
 &lt;div class=&quot;place1&quot;&gt;
@@ -287,9 +284,8 @@ The [[house]] where they
 grew up, in front of their 
 parents
 &lt;/div&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="5" name="Angel" tags="" position="644,344.5" size="100,100">(set: $name to &quot;Angel&quot;)
-(set: $personImage to &#39;&lt;img src=&quot;https://i.ibb.co/LvtHHxn/8.png&quot; alt=&quot;8&quot; border=&quot;0&quot;&gt;&#39;)
-&lt;h3&gt;Where do you want to break up with Angel&lt;/h3&gt;
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="5" name="Angel" tags="" position="644,346.5" size="100,100">(set: $name to &quot;Angel&quot;)
+(set: $personImage to &#39;&lt;img src=&quot;https://i.ibb.co/LvtHHxn/8.png&quot; alt=&quot;8&quot; border=&quot;0&quot;&gt;&#39;)&lt;h3&gt;Where do you want to break up with Angel?&lt;/h3&gt;
 
 &lt;div class=&quot;myGallery&quot;&gt;
 &lt;div class=&quot;place1&quot;&gt;
@@ -326,9 +322,8 @@ The [[house]] where they
 grew up, in front of their 
 parents
 &lt;/div&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="6" name="Cassie" tags="" position="1051,350.5" size="100,100">(set: $name to &quot;Cassie&quot;)
-(set: $personImage to &#39;&lt;img src=&quot;https://i.ibb.co/xYcPBpN/7.png&quot; alt=&quot;7&quot; border=&quot;0&quot;&gt;&#39;)
-&lt;h3&gt;Where do you want to break up with Cassie&lt;/h3&gt;
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="6" name="Cassie" tags="" position="1052,350.5" size="100,100">(set: $name to &quot;Cassie&quot;)
+(set: $personImage to &#39;&lt;img src=&quot;https://i.ibb.co/xYcPBpN/7.png&quot; alt=&quot;7&quot; border=&quot;0&quot;&gt;&#39;)&lt;h3&gt;Where do you want to break up with Cassie?&lt;/h3&gt;
 
 &lt;div class=&quot;myGallery&quot;&gt;
 &lt;div class=&quot;place1&quot;&gt;
@@ -366,8 +361,7 @@ grew up, in front of their
 parents
 &lt;/div&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="7" name="River" tags="" position="1184,352.5" size="100,100">(set: $name to &quot;River&quot;)
-(set: $personImage to &#39;&lt;img src=&quot;https://i.ibb.co/FgxBgHT/6.png&quot; alt=&quot;6&quot; border=&quot;0&quot;&gt;&#39;)
-&lt;h3&gt;Where do you want to break up with River&lt;/h3&gt;
+(set: $personImage to &#39;&lt;img src=&quot;https://i.ibb.co/FgxBgHT/6.png&quot; alt=&quot;6&quot; border=&quot;0&quot;&gt;&#39;)&lt;h3&gt;Where do you want to break up with River?&lt;/h3&gt;
 
 &lt;div class=&quot;myGallery&quot;&gt;
 &lt;div class=&quot;place1&quot;&gt;
@@ -404,9 +398,8 @@ The [[house]] where they
 grew up, in front of their 
 parents
 &lt;/div&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="8" name="Kenny" tags="" position="791,343.5" size="100,100">(set: $name to &quot;Kenny&quot;)
-(set: $personImage to &#39;&lt;img src=&quot;https://i.ibb.co/b15KTbG/4.png&quot; alt=&quot;4&quot; border=&quot;0&quot;&gt;&#39;)
-&lt;h3&gt;Where do you want to break up with Kenny&lt;/h3&gt;
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="8" name="Kenny" tags="" position="792,344.5" size="100,100">(set: $name to &quot;Kenny&quot;)
+(set: $personImage to &#39;&lt;img src=&quot;https://i.ibb.co/b15KTbG/4.png&quot; alt=&quot;4&quot; border=&quot;0&quot;&gt;&#39;)&lt;h3&gt;Where do you want to break up with Kenny?&lt;/h3&gt;
 
 &lt;div class=&quot;myGallery&quot;&gt;
 &lt;div class=&quot;place1&quot;&gt;
@@ -444,8 +437,7 @@ grew up, in front of their
 parents
 &lt;/div&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="9" name="DrKim" tags="" position="912,347.5" size="100,100">(set: $name to &quot;Dr.Kim&quot;)
-(set: $personImage to &#39;&lt;img src=&quot;https://i.ibb.co/VJv9wqL/3.png&quot; alt=&quot;3&quot; border=&quot;0&quot;&gt;&#39;)
-&lt;h3&gt;Where do you want to break up with Dr.Kim&lt;/h3&gt;
+(set: $personImage to &#39;&lt;img src=&quot;https://i.ibb.co/VJv9wqL/3.png&quot; alt=&quot;3&quot; border=&quot;0&quot;&gt;&#39;)&lt;h3&gt;Where do you want to break up with Dr.Kim?&lt;/h3&gt;
 
 &lt;div class=&quot;myGallery&quot;&gt;
 &lt;div class=&quot;place1&quot;&gt;
